* Improved Function "formatTimestamp" To use Jalali Calendar and use ext_date function. (stranger)
* Removing ucword() in icms_getLinkedUnameFromId() as we don't need to capitalized the first leter ofusername (malanciault/mcdonald3072)
* Implementing ICMS_SYSTEM_DBVERSION in include/version.php to centralized the definition of the latest dbversion of the system module (malanciault)

'''Changed'''
* impresstheme is using $icms_values. (stranger)
* in installer config settings, changed some settings to use textsarea instead of textarea. as was causing problems with those fields if URI's were entered etc. (vaughan)

== Impresscms 1.1==

===2008-10-31 : 1.1 Final===

'''Fixed'''
* Issues with content menu in RTL. (stranger)
* Issues with registration not completed with passwordmeter. (stranger)
* Issues with too easy captcha configs. (stranger)
* #2190687: When saving a block, if $options was a multi-levels array, StopXSS was failing to save array. StopXSS is now recursive and will all levels of $text parameter if it's an array (malanciault)
* #2192679: Leading space in cache/index.html (dave_l)
* Fixed issues with spambots. (Frederick/stranger)
* Fixed issues multiple time stamps. (stranger)
* Fixed security issue in snoopy.php: http://secunia.com/Advisories/32361/ (thanks to Gijoe)
* Fixed issue on the pagination links of the image manager tinyMCE plugin.
* The WYSIWYG group permission per module was confused when trying to know if a user should have permission to use WYSIWYG when posting a comment in a module that had such permission (malanciault/real_therplima)
* Fixed a bug with RTL, if this is not implemented, we will have troubles while sending posts in some modules like newbb (stranger)

'''Added'''
* Stop Spam Registration class and its experimental use in extra/anti-spam/register.php (stranger/malanciault)

''Improved'''
* It is now possible to specify in which modules Webmasters can use WYSIWYG editor (malanciault)