@@ -28,52 +28,52 @@ class IcmsVersionChecker {
 
 	/*
 	 * URL of the XML containing version information
-	 * @var $version_xml string 
+	 * @var $version_xml string
 	 */
 	var $version_xml = "http://www.impresscms.org/impresscms_version.xml";
-	
+
 	/*
 	 * Path of the file containing the cached version of the $version_xml content
-	 * @var cache_version_xml string 
+	 * @var cache_version_xml string
 	 */
 	var $cache_version_xml = "impresscms_version.xml";
-	
+
 	/*
 	 * Time before fetching the $version_xml again and store it in $cache_version_xml
 	 * @var $cache_time integer
 	 * @todo set this to a day at least or make it configurable in System Admin > Preferences
 	 */
 	var $cache_time=1;
-	
+
 	/*
 	 * Name of the latest version
 	 * @var $latest_version_name string
 	 */
 	var $latest_version_name;
-	
+
 	/*
 	 * Name of installed version
 	 * @var $installed_version_name string
 	 */
-	var $installed_version_name;	
+	var $installed_version_name;
 
 	/*
 	 * Number of the latest build
 	 * @var $latest_build integer
 	 */
-	var $latest_build;	
-	
+	var $latest_build;
+
 	/*
 	 * Status of the latest build
-	 * 
+	 *
  	 * 1  = Alpha
  	 * 2  = Beta
  	 * 3  = RC
- 	 * 10 = Final 
-	 * 
+ 	 * 10 = Final
+	 *
 	 * @var $latest_status integer
 	 */
-	var $latest_status;	
+	var $latest_status;
 
 	/*
 	 * URL of the latest release
@@ -85,8 +85,8 @@ class IcmsVersionChecker {
 	 * Changelog of the latest release
 	 * @var $latest_changelog string
 	 */
-	var $latest_changelog;		
-	
+	var $latest_changelog;
+
 	/**
 	 * Constructor
      *
@@ -95,10 +95,10 @@ class IcmsVersionChecker {
      */
 	function IcmsVersionChecker() {
 		$this->installed_version_name = ICMS_VERSION_NAME;
-		
+
 		$this->cache_version_xml = XOOPS_CACHE_PATH . '/' . $this->cache_version_xml;
 	}
-	
+
 	/**
 	 * Access the only instance of this class
      *
@@ -122,63 +122,43 @@ class IcmsVersionChecker {
      *
      * @return	TRUE if there is an update, FALSE if no update OR errors occuered
      *
-     */	
+     */
 	function check() {
-	
-		$ret = false;
-		
-		$rssdata = '';
-		
-		//$time_before_cache_again = 86400;
-		$time_before_cache_again = 1;
-		
-		if (!file_exists($this->cache_version_xml) || filemtime($this->cache_version_xml) < time() - $time_before_cache_again) {
-	        $snoopy = new Snoopy;
-	        if ($snoopy->fetch($this->version_xml)) {
-	            $rssdata = $snoopy->results;
-	            if (false !== $fp = fopen($this->cache_version_xml, 'w')) {
-	                fwrite($fp, $rssdata);
-	            }
-	        }
-		} else {
-			if (false !== $fp = fopen($this->cache_version_xml, 'r')) {
-				while (!feof ($fp)) {
-					$rssdata .= fgets($fp, 4096);
-				}
-				fclose($fp);
-			}
-		}     
-		
-		if ($rssdata != '') {
-			$rss2parser = new XoopsXmlRss2Parser($rssdata);
-			if (false != $rss2parser->parse()) {
-				// get the only item on that xml
-				$items =& $rss2parser->getItems();
-		
-				$latest_item = $items[0];
-				$this->latest_version_name = $latest_item['title'];
-				$this->latest_changelog = $latest_item['description'];
-				$build_info = explode('|', $latest_item['guid']);
-				$this->latest_build = $build_info[0];
-				$this->latest_status = $build_info[1];
-				
-				if ($this->latest_build > ICMS_VERSION_BUILD) {
-					// There is an update available
-					$this->latest_url = $latest_item['link'];
-					$ret = true;
-				}
-				
-			} else {
-        $this->errors[] = _AM_VERSION_CHECK_RSSDATA_EMPTY;//$rss2parser->getErrors();
-				$ret = false;
-			}
+
+		// Create a new instance of the SimplePie object
+		include_once(ICMS_ROOT_PATH . '/class/icmssimplerss.php');
+		$feed = new IcmsSimpleRss($this->version_xml, 0);
+		if ($feed) {
+			$versionInfo['title'] = $feed->get_title();
+			$versionInfo['link'] = $feed->get_link();
+			$versionInfo['image_url'] = $feed->get_image_url();
+			$versionInfo['image_title'] = $feed->get_image_title();
+			$versionInfo['image_link'] = $feed->get_image_link();
+			$versionInfo['description'] = $feed->get_description();
+			$feed_item = $feed->get_item(0);
+			$versionInfo['permalink'] = $feed_item->get_permalink();
+			$versionInfo['title'] = $feed_item->get_title();
+			$versionInfo['content'] = $feed_item->get_content();
+			$guidArray = $feed_item->get_item_tags('', 'guid');
+			$versionInfo['guid'] = $guidArray[0]['data'];
 		} else {
 			$this->errors[] = _AM_VERSION_CHECK_RSSDATA_EMPTY;
-			$ret = false;
+			return false;
 		}
-		return $ret;
+		$this->latest_version_name = $versionInfo['title'];
+		$this->latest_changelog = $versionInfo['description'];
+		$build_info = explode('|', $versionInfo['guid']);
+		$this->latest_build = $build_info[0];
+		$this->latest_status = $build_info[1];
+
+		if ($this->latest_build > ICMS_VERSION_BUILD) {
+			// There is an update available
+			$this->latest_url = $versionInfo['link'];
+			return true;
+		}
+		return false;
 	}
-	
+
 	/**
 	 * Gets all the error messages
 	 *
@@ -196,7 +176,7 @@ class IcmsVersionChecker {
             	}
         	}
         	return $ret;
-        }		
+        }
 	}
 }
 ?>
